# poormans-test

./: .gitignore  .pre-commit-config.yaml  README.md  device_session.py  erase_curp.py  helpers.py  main.py  phone_number.py  print_user_id.py  pyproject.toml  token_tools.py  users.py
